--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -2170,33 +2170,33 @@ CLIENT_1 DIALOG DISCARDABLE -3, 20, 496, 254
 STYLE WS_CHILD|DS_3DLOOK
 FONT 8, "MS Sans Serif"
 {
-  CONTROL "", 100, "Edit", WS_BORDER|WS_TABSTOP, 101, 40, 270, 11
-  CONTROL "", 110, "Edit", WS_BORDER|WS_TABSTOP, 101, 52, 270, 11
-  CONTROL "", 290, "Edit", WS_BORDER|WS_TABSTOP, 101, 65, 270, 11
-  CONTROL "", 410, "Edit", WS_BORDER|WS_TABSTOP, 101, 78, 113, 11
-  CONTROL "Publicar en web", 400, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 50, 93, 66, 9
-  CONTROL "General", 240, "Button", BS_AUTORADIOBUTTON, 50, 122, 60, 10
-  CONTROL "Recargo equivalencia", 130, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 50, 170, 81, 10
-  CONTROL "Unión Europea", 241, "Button", BS_AUTORADIOBUTTON, 50, 134, 60, 10
-  CONTROL "Exento", 242, "Button", BS_AUTORADIOBUTTON, 50, 146, 60, 10
-  CONTROL "Exportación", 243, "Button", BS_AUTORADIOBUTTON, 50, 158, 60, 10
-  CONTROL "", 310, "ComboBox", WS_BORDER|CBS_DROPDOWN|WS_TABSTOP, 111, 182, 66, 40
-  CONTROL "", 320, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 111, 197, 38, 11
-  CONTROL "", 159, "Edit", WS_BORDER|WS_TABSTOP, 204, 121, 122, 11
-  CONTROL "", 160, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 329, 121, 40, 11
-  CONTROL "", 169, "Edit", WS_BORDER|WS_TABSTOP, 204, 133, 122, 11
-  CONTROL "", 170, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 329, 133, 40, 11
-  CONTROL "", 175, "Edit", WS_BORDER|WS_TABSTOP, 204, 145, 122, 11
-  CONTROL "", 180, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 329, 145, 40, 11
-  CONTROL "", 185, "Edit", WS_BORDER|WS_TABSTOP, 204, 157, 122, 11
-  CONTROL "", 190, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 329, 157, 40, 11
-  CONTROL "", 205, "Edit", WS_BORDER|WS_TABSTOP, 204, 182, 122, 11
-  CONTROL "", 200, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 329, 182, 40, 11
-  CONTROL "", 300, "ComboBox", WS_BORDER|CBS_DROPDOWN|WS_TABSTOP, 283, 196, 86, 132
-  CONTROL "Autorizado para venta de crédito", 140, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 47, 225, 124, 10
-  CONTROL "Crédito solicitado", 145, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 47, 237, 124, 10
-  CONTROL "", 250, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 283, 223, 86, 11
-  CONTROL "", 251, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 283, 235, 86, 11
+  CONTROL "", 100, "Edit", WS_BORDER|WS_TABSTOP, 101, 39, 270, 11
+  CONTROL "", 110, "Edit", WS_BORDER|WS_TABSTOP, 101, 51, 270, 11
+  CONTROL "", 290, "Edit", WS_BORDER|WS_TABSTOP, 101, 63, 270, 11
+  CONTROL "", 410, "Edit", WS_BORDER|WS_TABSTOP, 101, 75, 113, 11
+  CONTROL "Publicar en web", 400, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 305, 77, 66, 9
+  CONTROL "General", 240, "Button", BS_AUTORADIOBUTTON, 50, 127, 60, 10
+  CONTROL "Recargo equivalencia", 130, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 50, 175, 81, 10
+  CONTROL "Unión Europea", 241, "Button", BS_AUTORADIOBUTTON, 50, 139, 60, 10
+  CONTROL "Exento", 242, "Button", BS_AUTORADIOBUTTON, 50, 151, 60, 10
+  CONTROL "Exportación", 243, "Button", BS_AUTORADIOBUTTON, 50, 163, 60, 10
+  CONTROL "", 310, "ComboBox", WS_BORDER|CBS_DROPDOWN|WS_TABSTOP, 101, 187, 93, 40
+  CONTROL "", 320, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 101, 202, 38, 11
+  CONTROL "", 159, "Edit", WS_BORDER|WS_TABSTOP, 204, 126, 122, 11
+  CONTROL "", 160, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 329, 126, 40, 11
+  CONTROL "", 169, "Edit", WS_BORDER|WS_TABSTOP, 204, 138, 122, 11
+  CONTROL "", 170, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 329, 138, 40, 11
+  CONTROL "", 175, "Edit", WS_BORDER|WS_TABSTOP, 204, 150, 122, 11
+  CONTROL "", 180, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 329, 150, 40, 11
+  CONTROL "", 185, "Edit", WS_BORDER|WS_TABSTOP, 204, 162, 122, 11
+  CONTROL "", 190, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 329, 162, 40, 11
+  CONTROL "", 205, "Edit", WS_BORDER|WS_TABSTOP, 204, 187, 122, 11
+  CONTROL "", 200, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 329, 187, 40, 11
+  CONTROL "", 300, "ComboBox", WS_BORDER|CBS_DROPDOWN|WS_TABSTOP, 283, 200, 86, 132
+  CONTROL "Autorizado para venta de crédito", 140, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 50, 227, 124, 10
+  CONTROL "Crédito solicitado", 145, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 50, 239, 124, 10
+  CONTROL "", 250, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 283, 225, 86, 11
+  CONTROL "", 251, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 283, 237, 86, 11
   CONTROL "Lun.", 230, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 390, 40, 27, 10
   CONTROL "", 330, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 421, 39, 30, 11
   CONTROL "", 430, "Edit", WS_BORDER|WS_TABSTOP, 453, 39, 34, 11
@@ -2218,38 +2218,43 @@ FONT 8, "MS Sans Serif"
   CONTROL "Dom.", 236, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 390, 118, 30, 10
   CONTROL "", 336, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 421, 117, 30, 11
   CONTROL "", 436, "Edit", WS_BORDER|WS_TABSTOP, 453, 117, 34, 11
-  CONTROL "Excluir de fidelización", 158, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 391, 189, 81, 10
+  CONTROL "Excluir de fidelización", 158, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 391, 182, 81, 10
   CONTROL "", 210, "ComboBox", WS_BORDER|CBS_DROPDOWN|WS_TABSTOP, 390, 141, 96, 133
-  CONTROL "Bloquear cliente", 155, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 391, 201, 64, 10
+  CONTROL "Bloquear cliente", 155, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 391, 196, 64, 10
   CONTROL "", 156, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 428, 212, 60, 11
   CONTROL "", 157, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 391, 235, 96, 11
-  CONTROL "Nombre ", -1, "Static", WS_GROUP, 50, 42, 26, 8
-  CONTROL "Domicilio", -1, "Static", WS_GROUP, 50, 55, 31, 8
-  CONTROL "Web", -1, "Static", WS_GROUP, 50, 68, 21, 8
-  CONTROL "Riesgo ", -1, "Static", WS_GROUP, 206, 226, 29, 8
-  CONTROL "Alcanzado", -1, "Static", WS_GROUP, 206, 238, 39, 8
-  CONTROL "%", -1, "Static", WS_GROUP, 370, 148, 7, 8
-  CONTROL "%", -1, "Static", WS_GROUP, 370, 160, 7, 8
-  CONTROL "%", -1, "Static", WS_GROUP, 370, 184, 7, 8
-  CONTROL "%", -1, "Static", WS_GROUP, 370, 123, 7, 8
+  CONTROL "Nombre ", -1, "Static", WS_GROUP, 50, 41, 26, 8
+  CONTROL "Domicilio", -1, "Static", WS_GROUP, 50, 54, 31, 8
+  CONTROL "Web", -1, "Static", WS_GROUP, 50, 66, 21, 8
+  CONTROL "Riesgo ", -1, "Static", WS_GROUP, 206, 228, 29, 8
+  CONTROL "Alcanzado", -1, "Static", WS_GROUP, 206, 240, 39, 8
+  CONTROL "%", -1, "Static", WS_GROUP, 370, 153, 7, 8
+  CONTROL "%", -1, "Static", WS_GROUP, 370, 165, 7, 8
+  CONTROL "%", -1, "Static", WS_GROUP, 370, 189, 7, 8
+  CONTROL "%", -1, "Static", WS_GROUP, 370, 128, 7, 8
   CONTROL "Mes de vacaciones", -1, "Static", WS_GROUP, 390, 132, 73, 8
-  CONTROL "Establecimiento", -1, "Button", BS_GROUPBOX, 44, 29, 338, 77
-  CONTROL "Régimen de impuestos", -1, "Button", BS_GROUPBOX, 43, 110, 155, 103
-  CONTROL "Bloqueo", -1, "Button", BS_GROUPBOX, 384, 179, 108, 71
-  CONTROL "Descuentos", 98, "Button", BS_GROUPBOX, 199, 110, 182, 61
-  CONTROL "Días de visita", -1, "Button", BS_GROUPBOX, 384, 29, 108, 150
-  CONTROL "%", -1, "Static", WS_GROUP, 370, 135, 7, 8
-  CONTROL "Aplicado en", -1, "Static", WS_GROUP, 206, 200, 47, 8
-  CONTROL "Porcentaje I.R.P.F.", -1, "Static", WS_GROUP, 47, 201, 36, 8
-  CONTROL "%", -1, "Static", WS_GROUP, 152, 201, 9, 8
-  CONTROL "Tipo I.R.P.F.", -1, "Static", WS_GROUP, 50, 185, 45, 8
-  CONTROL "Descuentos atipicos", -1, "Button", BS_GROUPBOX, 199, 171, 182, 42
-  CONTROL "Crédito", -1, "Button", BS_GROUPBOX, 43, 215, 338, 35
+  CONTROL "Establecimiento", -1, "Button", BS_GROUPBOX, 44, 29, 338, 61
+  CONTROL "Régimen de impuestos", -1, "Button", BS_GROUPBOX, 43, 115, 155, 101
+  CONTROL "Bloqueo", -1, "Button", BS_GROUPBOX, 384, 171, 108, 79
+  CONTROL "Descuentos", 98, "Button", BS_GROUPBOX, 199, 115, 182, 61
+  CONTROL "Días de visita", -1, "Button", BS_GROUPBOX, 384, 29, 108, 142
+  CONTROL "%", -1, "Static", WS_GROUP, 370, 140, 7, 8
+  CONTROL "Aplicado en", -1, "Static", WS_GROUP, 206, 204, 47, 8
+  CONTROL "Porcentaje I.R.P.F.", -1, "Static", WS_GROUP, 50, 205, 36, 8
+  CONTROL "%", -1, "Static", WS_GROUP, 142, 205, 9, 8
+  CONTROL "Tipo I.R.P.F.", -1, "Static", WS_GROUP, 50, 190, 45, 8
+  CONTROL "Descuentos atipicos", -1, "Button", BS_GROUPBOX, 199, 177, 182, 39
+  CONTROL "Crédito", -1, "Button", BS_GROUPBOX, 43, 217, 338, 35
   CONTROL "Fecha", -1, "Static", WS_GROUP, 391, 215, 20, 8
   CONTROL "Motivo", -1, "Static", WS_GROUP, 391, 225, 24, 8
-  CONTROL "Contraseña", -1, "Static", WS_GROUP, 50, 81, 37, 8
+  CONTROL "Contraseña", -1, "Static", WS_GROUP, 50, 78, 37, 8
   CONTROL "", 500, "Static", SS_BITMAP|SS_CENTERIMAGE, 4, 3, 34, 30
   CONTROL "Datos realcionados con la actividad comercial del cliente ", -1, "Static", SS_LEFTNOWORDWRAP|WS_GROUP, 44, 3, 446, 8
+  CONTROL "Última llamada", -1, "Button", BS_GROUPBOX, 43, 90, 338, 23
+  CONTROL "", 600, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 102, 99, 60, 11
+  CONTROL "", 601, "Edit", WS_BORDER|WS_TABSTOP, 163, 99, 28, 11
+  CONTROL "Fecha", -1, "Static", WS_GROUP, 49, 102, 35, 8
+  CONTROL "", 602, "TBtnBmp", 0x00000000, 89, 99, 12, 11
 }
 
 ART_2 DIALOG DISCARDABLE -22, -7, 496, 286
