--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -18257,7 +18257,7 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 166, "Edit", WS_BORDER|WS_TABSTOP, 539, 54, 123, 11
   CONTROL "", 170, "Edit", WS_BORDER|WS_TABSTOP, 487, 66, 50, 11
   CONTROL "", 171, "TBitMap", 0x00800000, 539, 66, 19, 11
-  CONTROL "", 180, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 560, 66, 80, 11
+  CONTROL "", 180, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 560, 66, 101, 11
   CONTROL "Aña&dir [F2]", 500, "Button", WS_TABSTOP, 43, 106, 50, 14
   CONTROL "&Modificar [F3]", 501, "Button", WS_TABSTOP, 98, 106, 50, 14
   CONTROL "&Eliminar [F4]", 502, "Button", WS_TABSTOP, 153, 106, 50, 14
@@ -18311,6 +18311,10 @@ FONT 8, "MS Sans Serif"
   CONTROL "Situación", -1, "Static", WS_GROUP, 44, 81, 49, 8
   CONTROL "", 990, "Static", SS_BITMAP|SS_CENTERIMAGE, 4, 3, 34, 30
   CONTROL "Pedidos a proveedores", -1, "Static", WS_GROUP, 44, 3, 120, 8
+  CONTROL "&Importar tarifa", 526, "Button", WS_TABSTOP, 374, 106, 50, 14
+  CONTROL "", 4002, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 487, 109, 50, 11
+  CONTROL "Crecimto.", -1, "Static", WS_GROUP, 456, 112, 31, 8
+  CONTROL "%", -1, "Static", WS_GROUP, 539, 111, 11, 8
 }
 
 PEDPRV_2 DIALOG DISCARDABLE 4, 18, 670, 375
