--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -16275,14 +16275,14 @@ FONT 8, "MS Sans Serif"
   CONTROL "Formatos", -1, "Button", BS_GROUPBOX, 4, 63, 316, 36
 }
 
-PAGEINI DIALOG DISCARDABLE 61, 21, 355, 285
+PAGEINI DIALOG DISCARDABLE 61, 21, 521, 361
 STYLE WS_POPUP|DS_MODALFRAME|DS_3DLOOK|WS_CAPTION|WS_SYSMENU|WS_VISIBLE
 CAPTION "Gestión de cartera"
-FONT 10, "MS Sans Serif Light"
+FONT 8, "MS Sans Serif"
 {
-  CONTROL "", 200, "SysTabControl32", WS_TABSTOP, 3, 4, 347, 254
-  CONTROL "", 210, "msctls_progress32", 0x00000000, 3, 280, 346, 4
-  CONTROL "&Salir", IDCANCEL, "Button", WS_TABSTOP, 299, 263, 50, 14
+  CONTROL "", 200, "SysTabControl32", WS_TABSTOP, 3, 4, 461, 313
+  CONTROL "", 210, "msctls_progress32", 0x00000000, 3, 355, 515, 5
+  CONTROL "&Salir", IDCANCEL, "Button", WS_TABSTOP, 414, 319, 50, 14
 }
 
 PAGEINI_01 DIALOG DISCARDABLE 21, 20, 461, 303
@@ -16293,16 +16293,13 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 110, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 190, 51, 60, 11
   CONTROL "", 120, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 279, 51, 59, 11
   CONTROL "", 130, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|WS_TABSTOP, 351, 51, 98, 134
-  CONTROL "Todos", 140, "Button", WS_TABSTOP, 50, 82, 50, 14
-  CONTROL "Ninguno", 150, "Button", WS_TABSTOP, 105, 82, 50, 14
-  CONTROL "Seleccionar", 160, "Button", WS_TABSTOP, 161, 82, 50, 14
   CONTROL "Fechas", -1, "Button", BS_GROUPBOX|WS_TABSTOP, 45, 37, 300, 32
   CONTROL "", 500, "Static", SS_BITMAP|SS_CENTERIMAGE, 4, 3, 34, 30
   CONTROL "Recibos de clientes por fecha de vencimiento.", -1, "Static", SS_LEFTNOWORDWRAP|WS_GROUP, 44, 2, 151, 8
   CONTROL "Desde", -1, "Static", WS_GROUP, 165, 54, 22, 8
   CONTROL "Hasta", -1, "Static", WS_GROUP, 254, 54, 21, 8
   CONTROL "Recibos", -1, "Button", BS_GROUPBOX|WS_TABSTOP, 45, 71, 409, 227
-  CONTROL "Modificar [F3]", 180, "Button", WS_TABSTOP, 217, 82, 50, 14
+  CONTROL "Modificar [F3]", 180, "Button", WS_TABSTOP, 50, 82, 50, 14
   CONTROL "Estado", -1, "Button", BS_GROUPBOX|WS_TABSTOP, 347, 37, 107, 32
   CONTROL "", 170, "TXBrowse", WS_TABSTOP|0x00300000, 50, 99, 401, 195
 }
@@ -19529,7 +19526,7 @@ FONT 8, "MS Sans Serif"
 
 LANGUAGE LANG_ENGLISH,SUBLANG_ENGLISH_US
 
-ImportarProductosProveedor DIALOGEX DISCARDABLE 6, 18, 153, 67
+IMPORTARPRODUCTOSPROVEEDOR DIALOGEX DISCARDABLE 6, 18, 153, 67
 STYLE WS_POPUP|DS_MODALFRAME|DS_CONTEXTHELP|DS_3DLOOK|WS_CAPTION|WS_SYSMENU|WS_VISIBLE
 CAPTION "Importar productos de proveedor"
 FONT 8, "MS Sans Serif", 0, 0, 1
