Poner Recurso pedidos proveedores

--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -11541,6 +11541,7 @@ FONT 8, "MS Sans Serif"
   CONTROL "Albaranes de clientes", 150, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 5, 106, 79, 12
   CONTROL "Facturas de clientes", 160, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 5, 118, 79, 12
   CONTROL "Facturas de proveedores", 170, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 5, 130, 92, 12
+  CONTROL "Pedidos de proveedores", 180, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 5, 142, 92, 12
   CONTROL "&Todos", 500, "Button", WS_TABSTOP, 2, 252, 50, 14
   CONTROL "&Ninguno", 501, "Button", WS_TABSTOP, 57, 252, 50, 14
   CONTROL "&Aceptar [F5]", IDOK, "Button", WS_TABSTOP, 201, 252, 50, 14
@@ -11551,12 +11552,13 @@ FONT 8, "MS Sans Serif"
   CONTROL "TMeter", 131, "TMeter", 0x00800000, 98, 94, 258, 10
   CONTROL "TMeter", 151, "TMeter", 0x00800000, 98, 106, 258, 10
   CONTROL "TMeter", 161, "TMeter", 0x00800000, 98, 118, 258, 10
-  CONTROL "TMeter", 171, "TMeter", 0x00800000, 98, 130, 258, 10
   CONTROL "Importación", -1, "Button", BS_GROUPBOX, 2, 40, 360, 24
   CONTROL "", -1, "Button", BS_GROUPBOX, 2, 63, 360, 178
   CONTROL "Directorio de factucont", -1, "Static", WS_GROUP, 5, 52, 74, 8
   CONTROL "", 600, "Static", SS_BITMAP|SS_CENTERIMAGE|SS_REALSIZEIMAGE, 0, 0, 365, 34
   CONTROL "", -1, "Static", SS_ETCHEDHORZ, 0, 32, 365, 1
+  CONTROL "TMeter", 171, "TMeter", 0x00800000, 98, 130, 258, 10
+  CONTROL "TMeter", 181, "TMeter", 0x00800000, 98, 142, 258, 10
 }
 
 HOY_ADMIN_800X600 DIALOG DISCARDABLE 133, 23, 532, 256
@@ -19529,7 +19531,7 @@ FONT 8, "MS Sans Serif"
 
 LANGUAGE LANG_ENGLISH,SUBLANG_ENGLISH_US
 
-ImportarProductosProveedor DIALOGEX DISCARDABLE 6, 18, 153, 67
+IMPORTARPRODUCTOSPROVEEDOR DIALOGEX DISCARDABLE 6, 18, 153, 67
 STYLE WS_POPUP|DS_MODALFRAME|DS_CONTEXTHELP|DS_3DLOOK|WS_CAPTION|WS_SYSMENU|WS_VISIBLE
 CAPTION "Importar productos de proveedor"
 FONT 8, "MS Sans Serif", 0, 0, 1
