--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -3348,23 +3348,22 @@ FONT 8, "MS Sans Serif"
   CONTROL "Enlace contable del artículo", -1, "Static", SS_LEFTNOWORDWRAP|WS_GROUP, 45, 5, 446, 8
 }
 
-INCIDENCIA DIALOG DISCARDABLE 103, 127, 337, 133
+INCIDENCIA DIALOG DISCARDABLE 103, 127, 337, 153
 STYLE WS_POPUP|DS_MODALFRAME|DS_3DLOOK|WS_CAPTION|WS_SYSMENU|WS_VISIBLE
 CAPTION "Incidencias"
 FONT 8, "MS Sans Serif"
 {
-  CONTROL "", 120, "Edit", WS_BORDER|WS_TABSTOP, 52, 4, 28, 11
-  CONTROL "", 130, "Edit", WS_BORDER|WS_TABSTOP, 82, 4, 101, 11
-  CONTROL "", 100, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 52, 16, 61, 11
-  CONTROL "Mostrar incidencia", 150, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 260, 4, 72, 12
-  CONTROL "Visto", 140, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 260, 16, 29, 12
-  CONTROL "", 110, "Edit", ES_MULTILINE|ES_AUTOVSCROLL|WS_BORDER|WS_TABSTOP, 52, 29, 280, 75
-  CONTROL "Fecha", -1, "Static", WS_GROUP, 5, 19, 27, 8
-  CONTROL "Incidencia", -1, "Static", WS_GROUP, 5, 29, 33, 8
-  CONTROL "&Aceptar [F5]", IDOK, "Button", BS_DEFPUSHBUTTON|WS_TABSTOP, 229, 116, 50, 14
-  CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 285, 116, 50, 14
-  CONTROL "", -1, "Static", SS_ETCHEDHORZ, 0, 109, 340, 2
-  CONTROL "Tipo", -1, "Static", WS_GROUP, 5, 7, 19, 8
+  CONTROL "", 110, "Edit", ES_MULTILINE|ES_AUTOVSCROLL|WS_BORDER|WS_TABSTOP, 52, 16, 280, 75
+  CONTROL "", 120, "Edit", WS_BORDER|WS_TABSTOP, 52, 93, 28, 11
+  CONTROL "", 130, "Edit", WS_BORDER|WS_TABSTOP, 81, 93, 251, 11
+  CONTROL "Mostrar incidencia", 150, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 52, 106, 72, 12
+  CONTROL "Visto", 140, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 52, 118, 29, 12
+  CONTROL "&Aceptar [F5]", IDOK, "Button", BS_DEFPUSHBUTTON|WS_TABSTOP, 226, 135, 50, 14
+  CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 282, 135, 50, 14
+  CONTROL "", 100, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 52, 3, 60, 11
+  CONTROL "Fecha", -1, "Static", WS_GROUP, 5, 6, 27, 8
+  CONTROL "Incidencia", -1, "Static", WS_GROUP, 5, 17, 33, 8
+  CONTROL "Tipo", -1, "Static", WS_GROUP, 5, 96, 19, 8
 }
 
 MATERIAL DIALOG DISCARDABLE 144, 103, 378, 128
@@ -16279,13 +16278,12 @@ FONT 8, "MS Sans Serif"
   CONTROL "Formatos", -1, "Button", BS_GROUPBOX, 4, 63, 316, 36
 }
 
-PAGEINI DIALOG DISCARDABLE 61, 21, 521, 361
+PAGEINI DIALOG DISCARDABLE 61, 21, 467, 337
 STYLE WS_POPUP|DS_MODALFRAME|DS_3DLOOK|WS_CAPTION|WS_SYSMENU|WS_VISIBLE
 CAPTION "Gestión de cartera"
 FONT 8, "MS Sans Serif"
 {
   CONTROL "", 200, "SysTabControl32", WS_TABSTOP, 3, 4, 461, 313
-  CONTROL "", 210, "msctls_progress32", 0x00000000, 3, 355, 515, 5
   CONTROL "&Salir", IDCANCEL, "Button", WS_TABSTOP, 414, 319, 50, 14
 }
 
@@ -16313,19 +16311,16 @@ STYLE WS_CHILD|DS_3DLOOK|WS_VISIBLE
 FONT 8, "MS Sans Serif"
 {
   CONTROL "", 100, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|WS_TABSTOP, 50, 51, 106, 134
-  CONTROL "", 110, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 193, 51, 60, 11
-  CONTROL "", 120, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 282, 51, 59, 11
+  CONTROL "", 110, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 190, 51, 60, 11
+  CONTROL "", 120, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 279, 51, 59, 11
   CONTROL "", 130, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|WS_TABSTOP, 351, 51, 98, 134
-  CONTROL "Todos", 140, "Button", WS_TABSTOP, 50, 82, 50, 14
-  CONTROL "Ninguno", 150, "Button", WS_TABSTOP, 105, 82, 50, 14
-  CONTROL "Seleccionar", 160, "Button", WS_TABSTOP, 161, 82, 50, 14
-  CONTROL "Modificar [F3]", 180, "Button", WS_TABSTOP, 217, 82, 50, 14
+  CONTROL "Modificar [F3]", 180, "Button", WS_TABSTOP, 50, 82, 50, 14
   CONTROL "", 500, "Static", SS_BITMAP|SS_CENTERIMAGE, 4, 3, 34, 30
   CONTROL "Pagos a proveedor por fecha de vencimiento.", -1, "Static", SS_LEFTNOWORDWRAP|WS_GROUP, 44, 2, 149, 8
   CONTROL "Recibos", -1, "Button", BS_GROUPBOX|WS_TABSTOP, 45, 71, 409, 230
   CONTROL "Fechas", -1, "Button", BS_GROUPBOX|WS_TABSTOP, 45, 37, 300, 32
-  CONTROL "Desde", -1, "Static", WS_GROUP, 168, 54, 22, 8
-  CONTROL "Hasta", -1, "Static", WS_GROUP, 258, 54, 21, 8
+  CONTROL "Desde", -1, "Static", WS_GROUP, 165, 54, 22, 8
+  CONTROL "Hasta", -1, "Static", WS_GROUP, 255, 54, 21, 8
   CONTROL "Estado", -1, "Button", BS_GROUPBOX|WS_TABSTOP, 347, 37, 107, 32
   CONTROL "", 170, "TXBrowse", WS_TABSTOP|0x00300000, 50, 99, 401, 199
 }
@@ -19544,5 +19539,23 @@ FONT 8, "MS Sans Serif", 0, 0, 1
   CONTROL "Hasta", -1, "Static", WS_GROUP, 8, 20, 30, 8
   CONTROL "Incremento", -1, "Static", WS_GROUP, 8, 34, 41, 8
   CONTROL "%", -1, "Static", WS_GROUP, 102, 33, 11, 8
+}
+
+LANGUAGE LANG_SPANISH,SUBLANG_SPANISH_MODERN
+
+TPVMENUS DIALOG DISCARDABLE 39, 38, 267, 76
+STYLE WS_POPUP|DS_MODALFRAME|DS_3DLOOK|WS_CAPTION|WS_SYSMENU|WS_VISIBLE
+CAPTION "Menús"
+FONT 8, "MS Sans Serif"
+{
+  CONTROL "", 100, "Edit", WS_BORDER|WS_TABSTOP, 62, 4, 40, 11
+  CONTROL "", 110, "Edit", WS_BORDER|WS_TABSTOP, 62, 16, 200, 11
+  CONTROL "", 120, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 62, 29, 100, 11
+  CONTROL "Obsoleto", 130, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 4, 44, 48, 10
+  CONTROL "&Aceptar [F5]", IDOK, "Button", WS_TABSTOP, 157, 56, 50, 14
+  CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 212, 56, 50, 14
+  CONTROL "Nombre", -1, "Static", WS_GROUP, 4, 19, 42, 8
+  CONTROL "Código", -1, "Static", WS_GROUP, 4, 7, 37, 8
+  CONTROL "Precio", -1, "Static", WS_GROUP, 4, 32, 54, 8
 }
 
