Bloqueo de clientes riesgo alcanzado

--- a/.gitignore
+++ b/.gitignore
@@ -51,10 +51,8 @@
 *.zip
 *.rar
 *.adt
-<<<<<<< HEAD
-=======
 *.$$$
->>>>>>> 1376acb30d4e4c21ef1905a47c4a69500631e32a
+*.dmp
 
 ############
 ## Windows
