--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -2194,7 +2194,7 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 200, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 329, 187, 40, 11
   CONTROL "", 300, "ComboBox", WS_BORDER|CBS_DROPDOWN|WS_TABSTOP, 283, 200, 86, 132
   CONTROL "Autorizado para venta de crédito", 140, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 50, 227, 124, 10
-  CONTROL "Crédito solicitado", 145, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 50, 239, 124, 10
+  CONTROL "Bloquear con riesgo alcanzado", 145, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 50, 239, 124, 10
   CONTROL "", 250, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 283, 225, 86, 11
   CONTROL "", 251, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 283, 237, 86, 11
   CONTROL "Lun.", 230, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 390, 40, 27, 10
