Orden de comanda

--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -19072,13 +19072,13 @@ STYLE WS_POPUP|DS_MODALFRAME|DS_3DLOOK|WS_CAPTION|WS_SYSMENU|WS_VISIBLE
 CAPTION "Orden de comanda"
 FONT 8, "Helv"
 {
-  CONTROL "", 100, "Edit", WS_BORDER|WS_TABSTOP, 75, 14, 210, 12
-  CONTROL "", 110, "Edit", WS_BORDER|WS_TABSTOP, 75, 28, 33, 12
+  CONTROL "", 110, "Edit", WS_BORDER|WS_TABSTOP, 75, 13, 33, 12
+  CONTROL "", 100, "Edit", WS_BORDER|WS_TABSTOP, 75, 28, 210, 12
   CONTROL "&Aceptar [F5]", IDOK, "Button", WS_TABSTOP, 187, 52, 50, 14
   CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 242, 52, 50, 14
   CONTROL "Identificación", -1, "Button", BS_GROUPBOX, 2, 3, 290, 43
-  CONTROL "Abreviatura", -1, "Static", WS_GROUP, 10, 32, 60, 8
-  CONTROL "Descripción ", -1, "Static", WS_GROUP, 10, 18, 60, 8
+  CONTROL "Código", -1, "Static", WS_GROUP, 10, 17, 60, 8
+  CONTROL "Descripción ", -1, "Static", WS_GROUP, 10, 32, 60, 8
 }
 
 LANGUAGE LANG_SPANISH,SUBLANG_SPANISH_MODERN
