--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -19067,18 +19067,22 @@ FONT 8, "MS Sans Serif"
 
 LANGUAGE LANG_SPANISH,SUBLANG_SPANISH
 
-ORDENCOMANDA DIALOG DISCARDABLE 60, 16, 297, 73
+ORDENCOMANDA DIALOG DISCARDABLE 60, 16, 297, 236
 STYLE WS_POPUP|DS_MODALFRAME|DS_3DLOOK|WS_CAPTION|WS_SYSMENU|WS_VISIBLE
 CAPTION "Orden de comanda"
 FONT 8, "Helv"
 {
   CONTROL "", 100, "Edit", WS_BORDER|WS_TABSTOP, 75, 13, 33, 12
   CONTROL "", 101, "Edit", WS_BORDER|WS_TABSTOP, 75, 28, 210, 12
-  CONTROL "&Aceptar [F5]", IDOK, "Button", WS_TABSTOP, 187, 52, 50, 14
-  CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 242, 52, 50, 14
+  CONTROL "Aña&dir [F2]", 500, "Button", WS_TABSTOP, 6, 61, 50, 14
+  CONTROL "&Eliminar [F4]", 501, "Button", WS_TABSTOP, 62, 61, 50, 14
+  CONTROL "", 400, "TXBrowse", WS_TABSTOP|0x00300000, 6, 78, 282, 132
+  CONTROL "&Aceptar [F5]", IDOK, "Button", WS_TABSTOP, 189, 219, 50, 14
+  CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 244, 219, 50, 14
   CONTROL "Identificación", -1, "Button", BS_GROUPBOX, 2, 3, 290, 43
   CONTROL "Código", -1, "Static", WS_GROUP, 10, 17, 60, 8
   CONTROL "Descripción ", -1, "Static", WS_GROUP, 10, 32, 60, 8
+  CONTROL "Artículos", -1, "Button", BS_GROUPBOX, 2, 51, 290, 163
 }
 
 LANGUAGE LANG_SPANISH,SUBLANG_SPANISH_MODERN
@@ -19553,8 +19557,9 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 110, "Edit", WS_BORDER|WS_TABSTOP, 62, 16, 200, 11
   CONTROL "", 120, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 62, 29, 100, 11
   CONTROL "Obsoleto", 130, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 4, 44, 48, 10
-  CONTROL "Aña&dir [F2]", 500, "Button", WS_TABSTOP, 6, 67, 50, 14
-  CONTROL "&Eliminar [F4]", 501, "Button", WS_TABSTOP, 62, 67, 50, 14
+  CONTROL "Aña&dir [F2]", 500, "Button", WS_TABSTOP, 6, 68, 50, 14
+  CONTROL "&Modificar [F3]", 501, "Button", WS_TABSTOP, 62, 68, 50, 14
+  CONTROL "&Eliminar [F4]", 502, "Button", WS_TABSTOP, 118, 68, 50, 14
   CONTROL "", 400, "TXBrowse", WS_TABSTOP|0x00300000, 6, 84, 253, 132
   CONTROL "&Aceptar [F5]", IDOK, "Button", WS_TABSTOP, 156, 225, 50, 14
   CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 211, 225, 50, 14
@@ -19564,15 +19569,17 @@ FONT 8, "MS Sans Serif"
   CONTROL "Ordenes de comanda", -1, "Button", BS_GROUPBOX, 2, 57, 261, 163
 }
 
-ORDENES_MENU DIALOG DISCARDABLE 76, -80, 353, 37
+MENU_ORDEN_ARTICULO DIALOG DISCARDABLE 60, 16, 297, 72
 STYLE WS_POPUP|DS_MODALFRAME|DS_3DLOOK|WS_CAPTION|WS_SYSMENU|WS_VISIBLE
-CAPTION "Añadiendo orden a menú"
-FONT 8, "MS Sans Serif"
+CAPTION "Añadiendo artículo"
+FONT 8, "Helv"
 {
-  CONTROL "", 100, "Edit", WS_BORDER|WS_TABSTOP, 42, 4, 40, 11
-  CONTROL "", 101, "Edit", WS_BORDER|WS_TABSTOP, 83, 4, 266, 11
-  CONTROL "&Aceptar [F5]", IDOK, "Button", WS_TABSTOP, 248, 18, 50, 14
-  CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 299, 18, 50, 14
-  CONTROL "Orden", -1, "Static", WS_GROUP, 4, 7, 25, 8
+  CONTROL "", 100, "Edit", WS_BORDER|WS_TABSTOP, 75, 13, 33, 12
+  CONTROL "", 101, "Edit", WS_BORDER|WS_TABSTOP, 75, 28, 210, 12
+  CONTROL "&Aceptar [F5]", IDOK, "Button", WS_TABSTOP, 187, 53, 50, 14
+  CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 242, 53, 50, 14
+  CONTROL "Artículo", -1, "Button", BS_GROUPBOX, 2, 3, 290, 43
+  CONTROL "Código", -1, "Static", WS_GROUP, 10, 17, 60, 8
+  CONTROL "Descripción ", -1, "Static", WS_GROUP, 10, 32, 60, 8
 }
 
