--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -19569,17 +19569,17 @@ FONT 8, "MS Sans Serif"
   CONTROL "Ordenes de comanda", -1, "Button", BS_GROUPBOX, 2, 57, 261, 163
 }
 
-MENU_ORDEN_ARTICULO DIALOG DISCARDABLE 60, 16, 297, 72
+TPVMENUARTICULO DIALOG DISCARDABLE 60, 16, 297, 67
 STYLE WS_POPUP|DS_MODALFRAME|DS_3DLOOK|WS_CAPTION|WS_SYSMENU|WS_VISIBLE
 CAPTION "Añadiendo artículo"
 FONT 8, "Helv"
 {
-  CONTROL "", 100, "Edit", WS_BORDER|WS_TABSTOP, 75, 13, 33, 12
-  CONTROL "", 101, "Edit", WS_BORDER|WS_TABSTOP, 75, 28, 210, 12
-  CONTROL "&Aceptar [F5]", IDOK, "Button", WS_TABSTOP, 187, 53, 50, 14
-  CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 242, 53, 50, 14
-  CONTROL "Artículo", -1, "Button", BS_GROUPBOX, 2, 3, 290, 43
-  CONTROL "Código", -1, "Static", WS_GROUP, 10, 17, 60, 8
-  CONTROL "Descripción ", -1, "Static", WS_GROUP, 10, 32, 60, 8
+  CONTROL "", 100, "Edit", WS_BORDER|WS_TABSTOP, 54, 13, 101, 11
+  CONTROL "", 101, "Edit", WS_BORDER|WS_TABSTOP, 54, 26, 233, 11
+  CONTROL "&Aceptar [F5]", IDOK, "Button", WS_TABSTOP, 188, 47, 50, 14
+  CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 243, 47, 50, 14
+  CONTROL "Artículo", -1, "Button", BS_GROUPBOX, 2, 3, 290, 39
+  CONTROL "Código", -1, "Static", WS_GROUP, 8, 16, 27, 8
+  CONTROL "Descripción ", -1, "Static", WS_GROUP, 8, 29, 45, 8
 }
 
