--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -19067,21 +19067,21 @@ FONT 8, "MS Sans Serif"
 
 LANGUAGE LANG_SPANISH,SUBLANG_SPANISH
 
-ORDENCOMANDA DIALOG DISCARDABLE 60, 16, 297, 236
+TPVMENUORDENES DIALOG DISCARDABLE 60, 16, 297, 236
 STYLE WS_POPUP|DS_MODALFRAME|DS_3DLOOK|WS_CAPTION|WS_SYSMENU|WS_VISIBLE
 CAPTION "Orden de comanda"
 FONT 8, "Helv"
 {
-  CONTROL "", 100, "Edit", WS_BORDER|WS_TABSTOP, 75, 13, 33, 11
-  CONTROL "", 101, "Edit", WS_BORDER|WS_TABSTOP, 75, 28, 210, 11
+  CONTROL "", 100, "Edit", WS_BORDER|WS_TABSTOP, 57, 13, 33, 11
+  CONTROL "", 101, "Edit", WS_BORDER|WS_TABSTOP, 57, 28, 229, 11
   CONTROL "Aña&dir [F2]", 500, "Button", WS_TABSTOP, 6, 61, 50, 14
   CONTROL "&Eliminar [F4]", 501, "Button", WS_TABSTOP, 62, 61, 50, 14
   CONTROL "", 400, "TXBrowse", WS_TABSTOP|0x00300000, 6, 78, 282, 132
   CONTROL "&Aceptar [F5]", IDOK, "Button", WS_TABSTOP, 189, 219, 50, 14
   CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 244, 219, 50, 14
-  CONTROL "Identificación", -1, "Button", BS_GROUPBOX, 2, 3, 290, 43
-  CONTROL "Código", -1, "Static", WS_GROUP, 10, 17, 60, 8
-  CONTROL "Descripción ", -1, "Static", WS_GROUP, 10, 32, 60, 8
+  CONTROL "Orden", -1, "Button", BS_GROUPBOX, 2, 3, 290, 43
+  CONTROL "Código", -1, "Static", WS_GROUP, 10, 17, 38, 8
+  CONTROL "Descripción ", -1, "Static", WS_GROUP, 10, 32, 44, 8
   CONTROL "Artículos", -1, "Button", BS_GROUPBOX, 2, 51, 290, 163
 }
 
@@ -19548,30 +19548,30 @@ FONT 8, "MS Sans Serif", 0, 0, 1
 
 LANGUAGE LANG_SPANISH,SUBLANG_SPANISH_MODERN
 
-TPVMENUS DIALOG DISCARDABLE 39, 38, 267, 243
+TPVMENUS DIALOG DISCARDABLE 39, 38, 345, 275
 STYLE WS_POPUP|DS_MODALFRAME|DS_3DLOOK|WS_CAPTION|WS_SYSMENU|WS_VISIBLE
 CAPTION "Menús"
 FONT 8, "MS Sans Serif"
 {
   CONTROL "", 100, "Edit", WS_BORDER|WS_TABSTOP, 62, 4, 40, 11
-  CONTROL "", 110, "Edit", WS_BORDER|WS_TABSTOP, 62, 16, 200, 11
+  CONTROL "", 110, "Edit", WS_BORDER|WS_TABSTOP, 62, 16, 274, 11
   CONTROL "", 120, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 62, 29, 100, 11
   CONTROL "Obsoleto", 130, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 4, 44, 48, 10
   CONTROL "Aña&dir [F2]", 500, "Button", WS_TABSTOP, 6, 68, 50, 14
   CONTROL "&Modificar [F3]", 501, "Button", WS_TABSTOP, 62, 68, 50, 14
   CONTROL "&Eliminar [F4]", 502, "Button", WS_TABSTOP, 118, 68, 50, 14
-  CONTROL "", 400, "TXBrowse", WS_TABSTOP|0x00300000, 6, 84, 253, 132
-  CONTROL "&Aceptar [F5]", IDOK, "Button", WS_TABSTOP, 156, 225, 50, 14
-  CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 211, 225, 50, 14
+  CONTROL "", 400, "TXBrowse", WS_TABSTOP|0x00300000, 6, 84, 329, 164
+  CONTROL "&Aceptar [F5]", IDOK, "Button", WS_TABSTOP, 235, 257, 50, 14
+  CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 290, 257, 50, 14
   CONTROL "Nombre", -1, "Static", WS_GROUP, 4, 19, 42, 8
   CONTROL "Código", -1, "Static", WS_GROUP, 4, 7, 37, 8
   CONTROL "Precio", -1, "Static", WS_GROUP, 4, 32, 54, 8
-  CONTROL "Ordenes de comanda", -1, "Button", BS_GROUPBOX, 2, 57, 261, 163
+  CONTROL "Ordenes de comanda", -1, "Button", BS_GROUPBOX, 2, 57, 339, 196
 }
 
-TPVMENUARTICULO DIALOG DISCARDABLE 60, 16, 297, 67
+TPVMENUARTICULO DIALOG DISCARDABLE 60, 16, 296, 64
 STYLE WS_POPUP|DS_MODALFRAME|DS_3DLOOK|WS_CAPTION|WS_SYSMENU|WS_VISIBLE
-CAPTION "Añadiendo artículo"
+CAPTION "Artículo"
 FONT 8, "Helv"
 {
   CONTROL "", 100, "Edit", WS_BORDER|WS_TABSTOP, 54, 13, 101, 11
@@ -19579,6 +19579,20 @@ FONT 8, "Helv"
   CONTROL "&Aceptar [F5]", IDOK, "Button", WS_TABSTOP, 188, 47, 50, 14
   CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 243, 47, 50, 14
   CONTROL "Artículo", -1, "Button", BS_GROUPBOX, 2, 3, 290, 39
+  CONTROL "Código", -1, "Static", WS_GROUP, 8, 16, 27, 8
+  CONTROL "Descripción ", -1, "Static", WS_GROUP, 8, 29, 45, 8
+}
+
+ORDENCOMANDA DIALOG DISCARDABLE 60, 16, 296, 64
+STYLE WS_POPUP|DS_MODALFRAME|DS_3DLOOK|WS_CAPTION|WS_SYSMENU|WS_VISIBLE
+CAPTION "Orden de comanda"
+FONT 8, "Helv"
+{
+  CONTROL "", 100, "Edit", WS_BORDER|WS_TABSTOP, 54, 13, 33, 11
+  CONTROL "", 101, "Edit", WS_BORDER|WS_TABSTOP, 54, 26, 233, 11
+  CONTROL "&Aceptar [F5]", IDOK, "Button", WS_TABSTOP, 188, 47, 50, 14
+  CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 243, 47, 50, 14
+  CONTROL "Orden de comanda", -1, "Button", BS_GROUPBOX, 2, 3, 290, 39
   CONTROL "Código", -1, "Static", WS_GROUP, 8, 16, 27, 8
   CONTROL "Descripción ", -1, "Static", WS_GROUP, 8, 29, 45, 8
 }
