Gestión de cobros en clientes

--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -16295,15 +16295,15 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 110, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 190, 51, 60, 11
   CONTROL "", 120, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 279, 51, 59, 11
   CONTROL "", 130, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|WS_TABSTOP, 351, 51, 98, 134
+  CONTROL "Modificar [F3]", 180, "Button", WS_TABSTOP, 50, 82, 50, 14
+  CONTROL "", 170, "TXBrowse", WS_TABSTOP|0x00300000, 50, 99, 401, 195
   CONTROL "Fechas", -1, "Button", BS_GROUPBOX|WS_TABSTOP, 45, 37, 300, 32
   CONTROL "", 500, "Static", SS_BITMAP|SS_CENTERIMAGE, 4, 3, 34, 30
   CONTROL "Recibos de clientes por fecha de vencimiento.", -1, "Static", SS_LEFTNOWORDWRAP|WS_GROUP, 44, 2, 151, 8
   CONTROL "Desde", -1, "Static", WS_GROUP, 165, 54, 22, 8
   CONTROL "Hasta", -1, "Static", WS_GROUP, 254, 54, 21, 8
   CONTROL "Recibos", -1, "Button", BS_GROUPBOX|WS_TABSTOP, 45, 71, 409, 227
-  CONTROL "Modificar [F3]", 180, "Button", WS_TABSTOP, 50, 82, 50, 14
   CONTROL "Estado", -1, "Button", BS_GROUPBOX|WS_TABSTOP, 347, 37, 107, 32
-  CONTROL "", 170, "TXBrowse", WS_TABSTOP|0x00300000, 50, 99, 401, 195
 }
 
 PAGEINI_02 DIALOG DISCARDABLE 21, 20, 461, 303
@@ -19595,5 +19595,24 @@ FONT 8, "Helv"
   CONTROL "Orden de comanda", -1, "Button", BS_GROUPBOX, 2, 3, 290, 39
   CONTROL "Código", -1, "Static", WS_GROUP, 8, 16, 27, 8
   CONTROL "Descripción ", -1, "Static", WS_GROUP, 8, 29, 45, 8
+}
+
+LANGUAGE LANG_ENGLISH,SUBLANG_ENGLISH_US
+
+CLIENT_18 DIALOG DISCARDABLE 26, 26, 496, 254
+STYLE WS_CHILD|DS_3DLOOK
+FONT 8, "MS Sans Serif"
+{
+  CONTROL "", 500, "Static", SS_BITMAP|SS_CENTERIMAGE, 4, 3, 34, 30
+  CONTROL "Gestión de recibos de clientes", -1, "Static", SS_LEFTNOWORDWRAP|WS_GROUP, 44, 3, 446, 8
+  CONTROL "", 100, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|WS_TABSTOP, 50, 46, 125, 134
+  CONTROL "", 110, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 209, 46, 60, 11
+  CONTROL "", 120, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 298, 46, 59, 11
+  CONTROL "", 130, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|WS_TABSTOP, 373, 46, 112, 134
+  CONTROL "Fechas", -1, "Button", BS_GROUPBOX|WS_TABSTOP, 44, 32, 323, 32
+  CONTROL "Desde", -1, "Static", WS_GROUP, 184, 49, 22, 8
+  CONTROL "Hasta", -1, "Static", WS_GROUP, 273, 49, 21, 8
+  CONTROL "Estado", -1, "Button", BS_GROUPBOX|WS_TABSTOP, 369, 32, 121, 32
+  CONTROL "", 170, "TXBrowse", WS_TABSTOP|0x00300000, 44, 66, 446, 184
 }
 
