--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -19569,18 +19569,19 @@ FONT 8, "MS Sans Serif"
   CONTROL "Ordenes de comanda", -1, "Button", BS_GROUPBOX, 2, 57, 339, 196
 }
 
-TPVMENUARTICULO DIALOG DISCARDABLE 60, 16, 296, 64
+TPVMENUARTICULO DIALOG DISCARDABLE 60, 16, 341, 92
 STYLE WS_POPUP|DS_MODALFRAME|DS_3DLOOK|WS_CAPTION|WS_SYSMENU|WS_VISIBLE
 CAPTION "Artículo"
 FONT 8, "Helv"
 {
   CONTROL "", 100, "Edit", WS_BORDER|WS_TABSTOP, 54, 13, 101, 11
-  CONTROL "", 101, "Edit", WS_BORDER|WS_TABSTOP, 54, 26, 233, 11
-  CONTROL "&Aceptar [F5]", IDOK, "Button", WS_TABSTOP, 188, 47, 50, 14
-  CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 243, 47, 50, 14
-  CONTROL "Artículo", -1, "Button", BS_GROUPBOX, 2, 3, 290, 39
+  CONTROL "", 101, "Edit", WS_BORDER|WS_TABSTOP, 54, 26, 212, 11
+  CONTROL "&Aceptar [F5]", IDOK, "Button", WS_TABSTOP, 165, 74, 50, 14
+  CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 220, 74, 50, 14
+  CONTROL "Artículo", -1, "Button", BS_GROUPBOX, 2, 3, 268, 66
   CONTROL "Código", -1, "Static", WS_GROUP, 8, 16, 27, 8
   CONTROL "Descripción ", -1, "Static", WS_GROUP, 8, 29, 45, 8
+  CONTROL "", 500, "TBitMap", 0x00800000, 275, 7, 60, 62
 }
 
 ORDENCOMANDA DIALOG DISCARDABLE 60, 16, 296, 64
