--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -846,14 +846,14 @@ FONT 8, "MS Sans Serif"
   CONTROL "Condición", -1, "Button", BS_GROUPBOX, 2, 147, 218, 24
 }
 
-CAJAS DIALOG DISCARDABLE 51, 46, 415, 360
+CAJAS DIALOG DISCARDABLE 51, 46, 415, 377
 STYLE WS_POPUP|DS_MODALFRAME|DS_3DLOOK|WS_CAPTION|WS_SYSMENU|WS_VISIBLE
 CAPTION "Cajas"
 FONT 8, "MS Sans Serif"
 {
-  CONTROL "", 100, "SysTabControl32", WS_TABSTOP, 5, 4, 407, 336
-  CONTROL "&Aceptar [F5]", 500, "Button", BS_DEFPUSHBUTTON|WS_TABSTOP, 307, 343, 50, 14
-  CONTROL "&Cancelar", 550, "Button", WS_TABSTOP, 362, 343, 50, 14
+  CONTROL "", 100, "SysTabControl32", WS_TABSTOP, 5, 4, 407, 349
+  CONTROL "&Aceptar [F5]", 500, "Button", BS_DEFPUSHBUTTON|WS_TABSTOP, 307, 358, 50, 14
+  CONTROL "&Cancelar", 550, "Button", WS_TABSTOP, 362, 358, 50, 14
 }
 
 CAJERO DIALOG DISCARDABLE 51, 39, 222, 157
@@ -14580,38 +14580,41 @@ FONT 8, "MS Sans Serif"
 
 LANGUAGE LANG_ENGLISH,SUBLANG_ENGLISH_US
 
-CAJAS_01 DIALOG DISCARDABLE 51, 46, 405, 314
+CAJAS_01 DIALOG DISCARDABLE 51, 46, 405, 327
 STYLE WS_CHILD|DS_3DLOOK|WS_VISIBLE
 FONT 8, "MS Sans Serif"
 {
   CONTROL "", 110, "Edit", WS_BORDER|WS_TABSTOP, 119, 37, 30, 11
   CONTROL "", 120, "Edit", WS_BORDER|WS_TABSTOP, 119, 50, 276, 11
-  CONTROL "No incluir en sesiones", 170, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 119, 64, 84, 10
-  CONTROL "", 190, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 119, 90, 52, 11
-  CONTROL "", 130, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 119, 102, 40, 11
-  CONTROL "", 131, "Edit", ES_AUTOHSCROLL|WS_BORDER, 160, 102, 235, 11
-  CONTROL "", 140, "Edit", WS_BORDER|WS_TABSTOP, 119, 115, 263, 11
-  CONTROL "", 141, "TBtnBmp", 0x00000000, 383, 115, 12, 11
-  CONTROL "", 150, "Edit", WS_BORDER|WS_TABSTOP, 119, 128, 263, 11
-  CONTROL "", 151, "TBtnBmp", 0x00000000, 383, 128, 12, 11
-  CONTROL "", 180, "Edit", WS_BORDER, 119, 141, 263, 11
-  CONTROL "", 181, "TBtnBmp", 0x00000000, 383, 141, 12, 11
+  CONTROL "No incluir en sesiones", 170, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 119, 63, 84, 10
+  CONTROL "", 200, "Edit", WS_BORDER|WS_TABSTOP, 119, 76, 30, 11
+  CONTROL "", 201, "Edit", WS_BORDER|WS_TABSTOP, 151, 76, 244, 11
+  CONTROL "", 190, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 119, 101, 52, 11
+  CONTROL "", 130, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 119, 114, 40, 11
+  CONTROL "", 131, "Edit", ES_AUTOHSCROLL|WS_BORDER, 160, 114, 235, 11
+  CONTROL "", 140, "Edit", WS_BORDER|WS_TABSTOP, 119, 127, 263, 11
+  CONTROL "", 141, "TBtnBmp", 0x00000000, 383, 127, 12, 11
+  CONTROL "", 150, "Edit", WS_BORDER|WS_TABSTOP, 119, 140, 263, 11
+  CONTROL "", 151, "TBtnBmp", 0x00000000, 383, 140, 12, 11
+  CONTROL "", 180, "Edit", WS_BORDER, 119, 153, 263, 11
+  CONTROL "", 181, "TBtnBmp", 0x00000000, 383, 153, 12, 11
   CONTROL "Nombre", -1, "Static", WS_GROUP, 49, 54, 41, 8
   CONTROL "Código", -1, "Static", WS_GROUP, 49, 40, 41, 8
-  CONTROL "Identificación", -1, "Button", BS_GROUPBOX, 44, 29, 355, 49
-  CONTROL "Código captura", -1, "Static", WS_GROUP, 49, 105, 49, 8
-  CONTROL "Propiedades", -1, "Button", BS_GROUPBOX, 44, 80, 355, 77
-  CONTROL "Impresora general", -1, "Static", WS_GROUP, 49, 118, 66, 8
-  CONTROL "Impresora de tickets", -1, "Static", WS_GROUP, 49, 131, 67, 8
-  CONTROL "Aña&dir [F2]", 500, "Button", WS_TABSTOP, 49, 170, 50, 14
-  CONTROL "&Modificar [F3]", 501, "Button", WS_TABSTOP, 103, 170, 50, 14
-  CONTROL "&Eliminar [F4]", 502, "Button", WS_TABSTOP, 158, 170, 50, 14
-  CONTROL "", 160, "TXBrowse", 0x00200000, 49, 185, 346, 121
-  CONTROL "Impresoras de comandas", -1, "Button", BS_GROUPBOX, 44, 159, 355, 153
+  CONTROL "Identificación", -1, "Button", BS_GROUPBOX, 44, 29, 355, 61
+  CONTROL "Código captura", -1, "Static", WS_GROUP, 49, 117, 49, 8
+  CONTROL "Propiedades", -1, "Button", BS_GROUPBOX, 44, 92, 355, 77
+  CONTROL "Impresora general", -1, "Static", WS_GROUP, 49, 130, 66, 8
+  CONTROL "Impresora de tickets", -1, "Static", WS_GROUP, 49, 143, 67, 8
+  CONTROL "Aña&dir [F2]", 500, "Button", WS_TABSTOP, 49, 182, 50, 14
+  CONTROL "&Modificar [F3]", 501, "Button", WS_TABSTOP, 103, 182, 50, 14
+  CONTROL "&Eliminar [F4]", 502, "Button", WS_TABSTOP, 158, 182, 50, 14
+  CONTROL "", 160, "TXBrowse", 0x00200000, 49, 197, 346, 121
+  CONTROL "Impresoras de comandas", -1, "Button", BS_GROUPBOX, 44, 171, 355, 153
   CONTROL "", 800, "Static", SS_BITMAP|SS_CENTERIMAGE, 4, 3, 34, 30
   CONTROL "Datos generales de la caja ", -1, "Static", SS_LEFTNOWORDWRAP|WS_GROUP, 44, 3, 355, 8
-  CONTROL "Impresora de notas", -1, "Static", WS_GROUP, 49, 144, 67, 8
-  CONTROL "Proxima sesión", -1, "Static", WS_GROUP, 49, 93, 52, 8
+  CONTROL "Impresora de notas", -1, "Static", WS_GROUP, 49, 156, 67, 8
+  CONTROL "Proxima sesión", -1, "Static", WS_GROUP, 49, 104, 52, 8
+  CONTROL "Caja padre", -1, "Static", WS_GROUP, 50, 79, 62, 8
 }
 
 CAJAS_02 DIALOG DISCARDABLE 51, 46, 407, 331
