--- a/resource/Gsttactil.rc
+++ b/resource/Gsttactil.rc
@@ -2423,3 +2423,16 @@ FONT 18, "Segoe UI"
   CONTROL "", 300, "Button", WS_TABSTOP, 132, 136, 24, 16
 }
 
+TPV_PROPIEDAD_ARTICULO DIALOG DISCARDABLE 87, -178, 178, 168
+STYLE WS_POPUP|DS_MODALFRAME|DS_3DLOOK|WS_CAPTION|WS_SYSMENU|WS_VISIBLE
+CAPTION "Propiedades del artículo"
+FONT 12, "Segoe UI"
+{
+  CONTROL "", 100, "TXBrowse", 0x00200000, 9, 13, 160, 122
+  CONTROL "", 101, "Button", WS_TABSTOP, 9, 138, 30, 22
+  CONTROL "", 102, "Button", WS_TABSTOP, 40, 138, 30, 22
+  CONTROL "Propiedades artículo", -1, "Button", BS_GROUPBOX, 4, 3, 170, 161
+  CONTROL "", IDOK, "Button", BS_DEFPUSHBUTTON|WS_TABSTOP, 109, 138, 30, 22
+  CONTROL "", IDCANCEL, "Button", WS_TABSTOP, 140, 138, 30, 22
+}
+
