--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -967,6 +967,8 @@ CAPTION "Clientes"
 FONT 8, "MS Sans Serif"
 {
   CONTROL "", 500, "SysTabControl32", 0x00000000, 2, 3, 500, 268
+  CONTROL "A&nterior [F7]", 3, "Button", 0x00000000, 1, 276, 50, 14
+  CONTROL "&Siguiente [F8]", 4, "Button", 0x00000000, 57, 276, 50, 14
   CONTROL "&Aceptar [F5]", IDOK, "Button", WS_TABSTOP, 396, 276, 50, 14
   CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 452, 276, 50, 14
 }
@@ -7030,26 +7032,28 @@ FONT 8, "MS Sans Serif"
   CONTROL "Matrícula", -1, "Static", WS_GROUP, 8, 202, 35, 8
 }
 
-USUARIOS DIALOG DISCARDABLE 193, 47, 620, 386
+USUARIOS DIALOG DISCARDABLE 193, 47, 620, 398
 STYLE WS_POPUP|DS_MODALFRAME|DS_3DLOOK|WS_CAPTION|WS_SYSMENU|WS_VISIBLE
 CAPTION "Usuarios"
 FONT 8, "MS Sans Serif"
 {
-  CONTROL "", 100, "Edit", WS_BORDER|WS_TABSTOP, 101, 40, 65, 11
-  CONTROL "", 110, "Edit", ES_MULTILINE|ES_AUTOVSCROLL|WS_BORDER|WS_TABSTOP, 101, 52, 272, 11
-  CONTROL "", 125, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|WS_TABSTOP, 101, 64, 110, 33
-  CONTROL "", 120, "Edit", ES_PASSWORD|WS_BORDER|WS_TABSTOP, 101, 78, 110, 11
-  CONTROL "", 122, "Edit", ES_PASSWORD|WS_BORDER|WS_TABSTOP, 101, 90, 110, 11
-  CONTROL "", 130, "Edit", WS_BORDER|WS_TABSTOP, 101, 118, 85, 11
-  CONTROL "", 131, "Edit", WS_BORDER|WS_TABSTOP, 188, 118, 185, 11
-  CONTROL "", 150, "Edit", WS_BORDER|WS_TABSTOP, 101, 130, 85, 11
-  CONTROL "", 151, "Edit", WS_BORDER, 188, 130, 185, 11
-  CONTROL "", 155, "Edit", WS_BORDER|WS_TABSTOP, 101, 142, 85, 11
-  CONTROL "", 156, "Edit", WS_BORDER, 188, 142, 185, 11
-  CONTROL "", 160, "Edit", WS_BORDER|WS_TABSTOP, 101, 154, 85, 11
-  CONTROL "", 161, "Edit", WS_BORDER, 188, 154, 185, 11
-  CONTROL "", 340, "Edit", WS_BORDER|WS_TABSTOP, 101, 166, 85, 11
-  CONTROL "", 140, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 101, 178, 272, 11
+  CONTROL "", 100, "Edit", WS_BORDER|WS_TABSTOP, 104, 40, 65, 11
+  CONTROL "", 110, "Edit", ES_MULTILINE|ES_AUTOVSCROLL|WS_BORDER|WS_TABSTOP, 104, 52, 272, 11
+  CONTROL "", 125, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|WS_TABSTOP, 104, 64, 110, 33
+  CONTROL "", 120, "Edit", ES_PASSWORD|WS_BORDER|WS_TABSTOP, 104, 78, 110, 11
+  CONTROL "", 122, "Edit", ES_PASSWORD|WS_BORDER|WS_TABSTOP, 104, 90, 110, 11
+  CONTROL "", 130, "Edit", WS_BORDER|WS_TABSTOP, 104, 118, 85, 11
+  CONTROL "", 131, "Edit", WS_BORDER|WS_TABSTOP, 191, 118, 185, 11
+  CONTROL "", 150, "Edit", WS_BORDER|WS_TABSTOP, 104, 130, 85, 11
+  CONTROL "", 151, "Edit", WS_BORDER, 191, 130, 185, 11
+  CONTROL "", 155, "Edit", WS_BORDER|WS_TABSTOP, 104, 142, 85, 11
+  CONTROL "", 156, "Edit", WS_BORDER, 191, 142, 185, 11
+  CONTROL "", 160, "Edit", WS_BORDER|WS_TABSTOP, 104, 154, 85, 11
+  CONTROL "", 161, "Edit", WS_BORDER, 191, 154, 185, 11
+  CONTROL "", 340, "Edit", WS_BORDER|WS_TABSTOP, 104, 166, 85, 11
+  CONTROL "", 140, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 104, 178, 272, 11
+  CONTROL "", 450, "Edit", WS_BORDER|WS_TABSTOP, 104, 190, 85, 11
+  CONTROL "", 451, "Edit", WS_BORDER, 191, 190, 185, 11
   CONTROL "No autorizado para cambio de precios", 240, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 397, 39, 133, 10
   CONTROL "No mostrar rentabilidad ", 260, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 397, 52, 133, 10
   CONTROL "No mostrar precios de costo", 270, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 397, 65, 133, 10
@@ -7062,38 +7066,39 @@ FONT 8, "MS Sans Serif"
   CONTROL "Filtrar operaciones por usuario", 350, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 397, 156, 133, 10
   CONTROL "Realizar documentos automáticos", 360, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 397, 168, 133, 10
   CONTROL "No abrir cajón portamonedas", 400, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 397, 180, 107, 10
-  CONTROL "", 320, "Edit", WS_BORDER|WS_TABSTOP, 101, 208, 85, 11
-  CONTROL "", 321, "Edit", WS_BORDER|WS_TABSTOP, 188, 208, 185, 11
-  CONTROL "", 170, "SysTreeView32", TVS_HASBUTTONS|TVS_HASLINES|TVS_LINESATROOT|TVS_SHOWSELALWAYS|TVS_TRACKSELECT|TVS_FULLROWSELECT|WS_BORDER, 51, 223, 322, 138
-  CONTROL "Sin acceso", 180, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 397, 209, 70, 10
-  CONTROL "Añadir, duplicar", 190, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 397, 222, 70, 10
-  CONTROL "Modificar", 200, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 397, 235, 70, 10
-  CONTROL "Zoom", 210, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 397, 248, 70, 10
-  CONTROL "Eliminar", 220, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 397, 261, 70, 10
-  CONTROL "Imprimir", 230, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 397, 274, 70, 10
-  CONTROL "&Aceptar [F5]", 560, "Button", BS_DEFPUSHBUTTON|WS_TABSTOP, 396, 369, 50, 14
-  CONTROL "&Cancelar", 561, "Button", WS_TABSTOP, 451, 369, 50, 14
-  CONTROL "&Ayuda", 569, "Button", WS_TABSTOP, 506, 369, 50, 14
+  CONTROL "", 320, "Edit", WS_BORDER|WS_TABSTOP, 104, 220, 85, 11
+  CONTROL "", 321, "Edit", WS_BORDER|WS_TABSTOP, 191, 220, 185, 11
+  CONTROL "", 170, "SysTreeView32", TVS_HASBUTTONS|TVS_HASLINES|TVS_LINESATROOT|TVS_SHOWSELALWAYS|TVS_TRACKSELECT|TVS_FULLROWSELECT|WS_BORDER, 51, 235, 325, 138
+  CONTROL "Sin acceso", 180, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 397, 221, 70, 10
+  CONTROL "Añadir, duplicar", 190, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 397, 234, 70, 10
+  CONTROL "Modificar", 200, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 397, 247, 70, 10
+  CONTROL "Zoom", 210, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 397, 260, 70, 10
+  CONTROL "Eliminar", 220, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 397, 273, 70, 10
+  CONTROL "Imprimir", 230, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 397, 286, 70, 10
+  CONTROL "&Aceptar [F5]", 560, "Button", BS_DEFPUSHBUTTON|WS_TABSTOP, 396, 381, 50, 14
+  CONTROL "&Cancelar", 561, "Button", WS_TABSTOP, 451, 381, 50, 14
+  CONTROL "&Ayuda", 569, "Button", WS_TABSTOP, 506, 381, 50, 14
   CONTROL "", 500, "TBitMap", 0x00800000, 558, 34, 59, 52
   CONTROL "Código", -1, "Static", WS_GROUP, 51, 43, 46, 8
   CONTROL "Nombre", -1, "Static", WS_GROUP, 51, 55, 46, 8
   CONTROL "Clave acceso", 121, "Static", WS_GROUP, 51, 81, 46, 8
   CONTROL "Tipo", -1, "Static", WS_GROUP, 51, 68, 46, 8
-  CONTROL "Mapa de accesos", -1, "Button", BS_GROUPBOX|WS_TABSTOP, 44, 197, 511, 168
+  CONTROL "Mapa de accesos", -1, "Button", BS_GROUPBOX|WS_TABSTOP, 44, 209, 511, 168
   CONTROL "Almacén", -1, "Static", WS_GROUP, 51, 121, 41, 8
   CONTROL "Caja", -1, "Static", WS_GROUP, 51, 133, 41, 8
   CONTROL "Imágen", -1, "Static", WS_GROUP, 51, 181, 41, 8
   CONTROL "Usuario", -1, "Button", BS_GROUPBOX|WS_TABSTOP|0x00000020, 44, 30, 338, 75
   CONTROL "Delegación", -1, "Static", WS_GROUP, 51, 157, 41, 8
   CONTROL "Repetir clave", 123, "Static", WS_GROUP, 51, 93, 46, 8
-  CONTROL "Propiedades", -1, "Button", BS_GROUPBOX|WS_TABSTOP|0x00000020, 390, 30, 165, 162
-  CONTROL "Valores por defecto", -1, "Button", BS_GROUPBOX|WS_TABSTOP|0x00000020, 44, 107, 338, 86
-  CONTROL "Grupo", 322, "Static", WS_GROUP, 51, 211, 33, 8
-  CONTROL "", 341, "Edit", WS_BORDER, 188, 166, 185, 11
+  CONTROL "Propiedades", -1, "Button", BS_GROUPBOX|WS_TABSTOP|0x00000020, 390, 30, 165, 176
+  CONTROL "Valores por defecto", -1, "Button", BS_GROUPBOX|WS_TABSTOP|0x00000020, 44, 107, 338, 99
+  CONTROL "Grupo", 322, "Static", WS_GROUP, 51, 223, 33, 8
+  CONTROL "", 341, "Edit", WS_BORDER, 191, 166, 185, 11
   CONTROL "Operario", -1, "Static", WS_GROUP, 51, 169, 41, 8
   CONTROL "", 990, "Static", SS_BITMAP|SS_CENTERIMAGE, 4, 3, 34, 30
   CONTROL "Usuarios", -1, "Static", WS_GROUP, 44, 3, 120, 8
   CONTROL "Empresa", -1, "Static", WS_GROUP, 51, 145, 41, 8
+  CONTROL "Tipo incidencia", -1, "Static", WS_GROUP, 51, 193, 52, 8
 }
 
 SEANUMSER DIALOG DISCARDABLE -157, -139, 671, 337
@@ -11738,6 +11743,9 @@ FONT 8, "MS Sans Serif"
   CONTROL "&Zoom", 503, "Button", WS_TABSTOP, 213, 39, 50, 14
   CONTROL "", 600, "Static", SS_BITMAP|SS_CENTERIMAGE, 4, 3, 34, 30
   CONTROL "Incidencias registradas ", -1, "Static", SS_LEFTNOWORDWRAP|WS_GROUP, 44, 3, 446, 8
+  CONTROL "", 450, "Edit", WS_BORDER|WS_TABSTOP, 323, 42, 37, 11
+  CONTROL "", 451, "Edit", WS_BORDER, 361, 42, 129, 11
+  CONTROL "Tipo incidencia", -1, "Static", WS_GROUP, 269, 45, 52, 8
 }
 
 NOMBRE_FILTRO DIALOG DISCARDABLE 30, 84, 252, 62
