--- a/resource/Gstimage11.rc
+++ b/resource/Gstimage11.rc
@@ -35,6 +35,7 @@ Bookkeeper_alpha_48 BITMAP "..\\bmp\\Bookkeeper_alpha_48.bmp"
 Magic_wand_alpha_48 BITMAP "..\\bmp\\Magic_wand_alpha_48.bmp"
 Pda2_write_alpha_48 BITMAP "..\\bmp\\Pda2_Write_Alpha_48.bmp"
 Star_Red_Alpha_48 BITMAP "..\\bmp\\Star_Red_Alpha_48.bmp"
+Clipboard_Empty_48 BITMAP "..\\bmp\\clipboard_empty_48.bmp"
 Calendar_Alpha_48 BITMAP "..\\bmp\\Calendar_Alpha_48.bmp"
 Symbol_Questionmark_Alpha_48 BITMAP "..\\bmp\\Symbol_Questionmark_Alpha_48.bmp"
 Preferences_48_Alpha BITMAP "..\\bmp\\Preferences_48_Alpha.bmp"
