--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -19142,12 +19142,13 @@ FONT 8, "MS Sans Serif"
   CONTROL "No acumular unidades en táctil", 128, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 50, 172, 111, 10
   CONTROL "Albaranes en táctil", 129, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 50, 184, 71, 10
   CONTROL "Facturas en táctil", 130, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 50, 196, 67, 10
-  CONTROL "Mostrar total al cobrar", 200, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 50, 208, 82, 10
-  CONTROL "", 210, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|WS_VSCROLL|WS_TABSTOP, 138, 219, 96, 91
-  CONTROL "Propiedades", -1, "Button", BS_GROUPBOX, 44, 29, 386, 207
+  CONTROL "Ocultar líneas borradas", 131, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 50, 208, 100, 10
+  CONTROL "Mostrar total al cobrar", 200, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 50, 220, 82, 10
+  CONTROL "", 210, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|WS_VSCROLL|WS_TABSTOP, 138, 234, 96, 91
+  CONTROL "Propiedades", -1, "Button", BS_GROUPBOX, 44, 29, 386, 227
   CONTROL "", 500, "Static", SS_BITMAP|SS_CENTERIMAGE, 4, 3, 34, 30
   CONTROL "Opciones para el terminal punto de venta", -1, "Static", SS_LEFTNOWORDWRAP|WS_GROUP, 44, 3, 384, 8
-  CONTROL "Opción impresión al cobrar", -1, "Static", WS_GROUP, 50, 222, 86, 8
+  CONTROL "Opción impresión al cobrar", -1, "Static", WS_GROUP, 50, 237, 86, 8
 }
 
 FASTFILTROS DIALOG DISCARDABLE 9, 8, 490, 294
