--- a/resource/Gsttactil.rc
+++ b/resource/Gsttactil.rc
@@ -2269,21 +2269,25 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 100, "TXBrowse", WS_TABSTOP|0x00800000, 44, 29, 217, 186
 }
 
-DIVIDIR_MESAS DIALOG DISCARDABLE -9, -141, 593, 517
+DIVIDIR_MESAS DIALOG DISCARDABLE -9, -141, 593, 416
 STYLE WS_POPUP|DS_MODALFRAME|DS_3DLOOK|WS_CAPTION|WS_SYSMENU|WS_VISIBLE
 CAPTION "Dividir mesas"
 FONT 8, "MS Sans Serif"
 {
-  CONTROL "Ticket pendiente", 230, "Button", BS_GROUPBOX, 2, 82, 267, 393
-  CONTROL "", 100, "TXBrowse", WS_TABSTOP|0x00800000, 8, 98, 256, 372
-  CONTROL "Nuevo ticket", 240, "Button", BS_GROUPBOX, 321, 82, 269, 393
-  CONTROL "", 200, "TXBrowse", WS_TABSTOP|0x00800000, 328, 98, 256, 372
-  CONTROL "", 210, "Button", WS_TABSTOP, 274, 183, 42, 36
-  CONTROL "", 220, "Button", WS_TABSTOP, 274, 260, 42, 36
-  CONTROL "", 260, "Button", WS_TABSTOP, 53, 478, 42, 36
-  CONTROL "", 250, "Button", WS_TABSTOP, 7, 478, 42, 36
-  CONTROL "", 280, "Button", WS_TABSTOP, 373, 478, 42, 36
-  CONTROL "", 270, "Button", WS_TABSTOP, 327, 478, 42, 36
+  CONTROL "Ticket origen", 100, "Button", BS_GROUPBOX, 2, 82, 267, 292
+  CONTROL "", 130, "TXBrowse", WS_TABSTOP|0x00800000, 8, 129, 256, 239
+  CONTROL "Ticket destino", 200, "Button", BS_GROUPBOX, 321, 81, 269, 292
+  CONTROL "", 230, "TXBrowse", WS_TABSTOP|0x00800000, 328, 130, 256, 237
+  CONTROL "", 300, "Button", WS_TABSTOP, 274, 183, 42, 36
+  CONTROL "", 310, "Button", WS_TABSTOP, 274, 260, 42, 36
+  CONTROL "", 330, "Button", WS_TABSTOP, 53, 377, 42, 36
+  CONTROL "", 320, "Button", WS_TABSTOP, 7, 377, 42, 36
+  CONTROL "", 350, "Button", WS_TABSTOP, 373, 377, 42, 36
+  CONTROL "", 340, "Button", WS_TABSTOP, 327, 377, 42, 36
+  CONTROL "Sala", 210, "Static", WS_GROUP, 329, 94, 257, 13
+  CONTROL "Ticket", 220, "Static", WS_GROUP, 329, 112, 256, 13
+  CONTROL "Sala", 110, "Static", WS_GROUP, 7, 94, 257, 13
+  CONTROL "Ticket", 120, "Static", WS_GROUP, 7, 112, 256, 13
 }
 
 TPV_LISTA_MULTIPLES DIALOG DISCARDABLE 4, 47, 377, 275
