Dividir o unir mesa

--- a/resource/Gstimage12.rc
+++ b/resource/Gstimage12.rc
@@ -38,7 +38,9 @@ shoppingbasket_full_160 BITMAP "..\\bmp\\shoppingbasket_full_160.bmp"
 address_book2_160 BITMAP "..\\bmp\\address_book2_160.bmp"
 CASHIER_160 BITMAP "..\\bmp\\Cashier_160.bmp"
 WHEEL_160 BITMAP "..\\bmp\\Wheel_160.bmp"
+navigate_left BITMAP "..\\bmp\\navigate_left.bmp"
 navigate_left2 BITMAP "..\\bmp\\navigate_left2.bmp"
+navigate_right BITMAP "..\\bmp\\navigate_right.bmp"
 navigate_right2 BITMAP "..\\bmp\\navigate_right2.bmp"
 document_text_printer2_32 BITMAP "..\\bmp\\document_text_printer2_32.bmp"
 note_cut_32 BITMAP "..\\bmp\\note_cut_32.bmp"
