--- a/resource/Gsttactil.rc
+++ b/resource/Gsttactil.rc
@@ -2274,22 +2274,25 @@ STYLE WS_POPUP|DS_MODALFRAME|DS_3DLOOK|WS_CAPTION|WS_SYSMENU|WS_VISIBLE
 CAPTION "Dividir mesas"
 FONT 8, "MS Sans Serif"
 {
-  CONTROL "Ticket origen", 100, "Button", BS_GROUPBOX, 2, 82, 267, 292
-  CONTROL "", 130, "TXBrowse", WS_TABSTOP|0x00800000, 8, 129, 256, 239
-  CONTROL "Ticket destino", 200, "Button", BS_GROUPBOX, 321, 81, 269, 292
-  CONTROL "", 230, "TXBrowse", WS_TABSTOP|0x00800000, 328, 130, 256, 237
-  CONTROL "", 300, "Button", WS_TABSTOP, 274, 130, 42, 36
-  CONTROL "", 310, "Button", WS_TABSTOP, 274, 170, 42, 36
+  CONTROL "Ticket origen", 100, "Button", BS_GROUPBOX, 2, 8, 267, 365
+  CONTROL "", 130, "TXBrowse", WS_TABSTOP|0x00800000, 9, 64, 256, 302
+  CONTROL "Ticket destino", 200, "Button", BS_GROUPBOX, 321, 6, 269, 367
+  CONTROL "", 230, "TXBrowse", WS_TABSTOP|0x00800000, 328, 64, 256, 303
+  CONTROL "", 300, "Button", WS_TABSTOP, 274, 64, 42, 36
+  CONTROL "", 310, "Button", WS_TABSTOP, 274, 104, 42, 36
   CONTROL "", 360, "Button", WS_TABSTOP, 273, 291, 42, 36
   CONTROL "", 370, "Button", WS_TABSTOP, 274, 331, 42, 36
   CONTROL "", 320, "Button", WS_TABSTOP, 7, 377, 42, 36
   CONTROL "", 330, "Button", WS_TABSTOP, 53, 377, 42, 36
+  CONTROL "", 380, "Button", WS_TABSTOP, 223, 377, 42, 36
   CONTROL "", 340, "Button", WS_TABSTOP, 327, 377, 42, 36
   CONTROL "", 350, "Button", WS_TABSTOP, 373, 377, 42, 36
-  CONTROL "Sala", 210, "Static", WS_GROUP, 329, 94, 257, 13
-  CONTROL "Ticket", 220, "Static", WS_GROUP, 329, 112, 256, 13
-  CONTROL "Sala", 110, "Static", WS_GROUP, 7, 94, 257, 13
-  CONTROL "Ticket", 120, "Static", WS_GROUP, 7, 112, 256, 13
+  CONTROL "", IDOK, "Button", BS_DEFPUSHBUTTON|WS_TABSTOP, 495, 377, 42, 36
+  CONTROL "", IDCANCEL, "Button", WS_TABSTOP, 541, 377, 42, 36
+  CONTROL "Sala", 210, "Static", WS_GROUP, 329, 26, 257, 13
+  CONTROL "Ticket", 220, "Static", WS_GROUP, 329, 44, 256, 13
+  CONTROL "Sala", 110, "Static", WS_GROUP, 7, 26, 257, 13
+  CONTROL "Ticket", 120, "Static", WS_GROUP, 7, 44, 256, 13
 }
 
 TPV_LISTA_MULTIPLES DIALOG DISCARDABLE 4, 47, 377, 275
