--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -7443,7 +7443,7 @@ FONT 8, "MS Sans Serif"
   CONTROL "Desde", 1111, "Static", WS_GROUP, 299, 88, 26, 8
   CONTROL "Hasta", 1121, "Static", WS_GROUP, 397, 88, 24, 8
   CONTROL "Rangos", -1, "Button", BS_GROUPBOX, 184, 72, 485, 299
-  CONTROL "", 100, "SysTabControl32", 0x00000000, 2, 74, 180, 325
+  CONTROL "", 100, "SysTreeView32", TVS_HASBUTTONS|TVS_HASLINES|TVS_LINESATROOT|WS_BORDER|WS_TABSTOP, 2, 72, 179, 327
 }
 
 FASTREPORTARTICULOS_1 DIALOG DISCARDABLE 9, 8, 480, 240
