--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -3317,7 +3317,7 @@ FONT 8, "MS Sans Serif"
   CONTROL "Presupuestos", 180, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 9, 50, 56, 8
   CONTROL "Pedidos", 190, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 9, 62, 39, 8
   CONTROL "Albaranes", 200, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 9, 74, 45, 8
-  CONTROL "Facturas", 210, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 9, 86, 41, 8
+  CONTROL "Facturas, Rectificativas y Tickets", 210, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 9, 86, 125, 8
   CONTROL "Cajas ", 220, "Button", BS_AUTORADIOBUTTON|WS_GROUP, 8, 125, 32, 10
   CONTROL "Unidades", 221, "Button", BS_AUTORADIOBUTTON, 8, 137, 44, 10
   CONTROL "", 230, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 52, 148, 60, 12
