caduciad en produccion

--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -14266,48 +14266,50 @@ FONT 8, "MS Sans Serif"
   CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 334, 152, 50, 14
 }
 
-LPRODUCIDO_1 DIALOG DISCARDABLE 144, 103, 378, 130
+LPRODUCIDO_1 DIALOG DISCARDABLE 144, 103, 378, 154
 STYLE WS_CHILD|DS_3DLOOK|WS_VISIBLE
 FONT 8, "MS Sans Serif"
 {
   CONTROL "", 110, "Edit", WS_BORDER|WS_TABSTOP, 74, 11, 68, 12
   CONTROL "", 111, "Edit", ES_MULTILINE|ES_AUTOVSCROLL|WS_BORDER|WS_TABSTOP, 144, 11, 227, 12
   CONTROL "", 210, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 74, 23, 68, 12
-  CONTROL "", 220, "Edit", WS_BORDER|WS_TABSTOP, 74, 35, 68, 12
-  CONTROL "", 222, "Edit", WS_BORDER, 144, 35, 227, 12
-  CONTROL "", 230, "Edit", WS_BORDER|WS_TABSTOP, 74, 47, 68, 12
-  CONTROL "", 232, "Edit", WS_BORDER, 144, 47, 227, 12
-  CONTROL "", 120, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 74, 59, 68, 12
-  CONTROL "", 130, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 74, 71, 68, 12
-  CONTROL "", 140, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER, 74, 83, 68, 12
-  CONTROL "", 150, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 74, 95, 68, 12
-  CONTROL "", 170, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 192, 69, 53, 12
-  CONTROL "", 171, "Edit", WS_BORDER|WS_TABSTOP, 247, 69, 20, 12
-  CONTROL "", 172, "Edit", ES_RIGHT|WS_BORDER, 318, 69, 53, 12
-  CONTROL "", 180, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 192, 82, 53, 12
-  CONTROL "", 181, "Edit", WS_BORDER|WS_TABSTOP, 247, 82, 20, 12
-  CONTROL "", 182, "Edit", ES_RIGHT|WS_BORDER, 318, 82, 53, 12
-  CONTROL "", 190, "Edit", WS_BORDER|WS_TABSTOP, 192, 95, 30, 12
-  CONTROL "", 191, "Edit", WS_BORDER, 223, 95, 148, 12
-  CONTROL "", 160, "Edit", ES_RIGHT|WS_BORDER, 74, 113, 68, 12
-  CONTROL "", 200, "Edit", ES_RIGHT|WS_BORDER, 192, 112, 75, 12
-  CONTROL "Producto", -1, "Button", BS_GROUPBOX, 2, 2, 374, 126
-  CONTROL "Cajas ", 121, "Static", WS_GROUP, 8, 62, 23, 8
-  CONTROL "Total unidades", -1, "Static", WS_GROUP, 8, 86, 50, 8
-  CONTROL "Unidades", -1, "Static", WS_GROUP, 8, 74, 34, 8
+  CONTROL "", 320, "Edit", ES_AUTOHSCROLL|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 74, 35, 68, 12
+  CONTROL "", 220, "Edit", WS_BORDER|WS_TABSTOP, 74, 49, 68, 12
+  CONTROL "", 222, "Edit", WS_BORDER, 144, 49, 227, 12
+  CONTROL "", 230, "Edit", WS_BORDER|WS_TABSTOP, 74, 60, 68, 12
+  CONTROL "", 232, "Edit", WS_BORDER, 144, 60, 227, 12
+  CONTROL "", 120, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 74, 73, 68, 12
+  CONTROL "", 130, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 74, 85, 68, 12
+  CONTROL "", 140, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER, 74, 97, 68, 12
+  CONTROL "", 150, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 74, 109, 68, 12
+  CONTROL "", 170, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 192, 83, 53, 12
+  CONTROL "", 171, "Edit", WS_BORDER|WS_TABSTOP, 247, 83, 20, 12
+  CONTROL "", 172, "Edit", ES_RIGHT|WS_BORDER, 318, 83, 53, 12
+  CONTROL "", 180, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 192, 96, 53, 12
+  CONTROL "", 181, "Edit", WS_BORDER|WS_TABSTOP, 247, 96, 20, 12
+  CONTROL "", 182, "Edit", ES_RIGHT|WS_BORDER, 318, 96, 53, 12
+  CONTROL "", 190, "Edit", WS_BORDER|WS_TABSTOP, 192, 109, 30, 12
+  CONTROL "", 191, "Edit", WS_BORDER, 223, 109, 148, 12
+  CONTROL "", 160, "Edit", ES_RIGHT|WS_BORDER, 74, 127, 68, 12
+  CONTROL "", 200, "Edit", ES_RIGHT|WS_BORDER, 192, 127, 75, 12
+  CONTROL "Producto", -1, "Button", BS_GROUPBOX, 2, 2, 374, 146
+  CONTROL "Cajas ", 121, "Static", WS_GROUP, 8, 76, 23, 8
+  CONTROL "Total unidades", -1, "Static", WS_GROUP, 8, 100, 50, 8
+  CONTROL "Unidades", -1, "Static", WS_GROUP, 8, 88, 34, 8
   CONTROL "Artículo", -1, "Static", WS_GROUP, 8, 14, 27, 8
-  CONTROL "", -1, "Static", SS_ETCHEDHORZ, 7, 109, 365, 1
-  CONTROL "Stock actual", -1, "Static", WS_GROUP, 146, 114, 44, 8
-  CONTROL "Precio", -1, "Static", WS_GROUP, 8, 98, 23, 8
-  CONTROL "Importe", -1, "Static", WS_GROUP, 8, 116, 26, 8
-  CONTROL "Almacén", -1, "Static", WS_GROUP, 146, 98, 31, 8
-  CONTROL "Peso", -1, "Static", WS_GROUP, 146, 72, 20, 8
-  CONTROL "Volumen", -1, "Static", WS_GROUP, 146, 85, 30, 8
-  CONTROL "Tot. peso", -1, "Static", WS_GROUP, 269, 72, 37, 8
-  CONTROL "Tot. volumen", -1, "Static", WS_GROUP, 269, 85, 42, 8
-  CONTROL "Propiedad 2", 231, "Static", WS_GROUP, 8, 50, 51, 8
-  CONTROL "Propiedad 1", 221, "Static", WS_GROUP, 8, 38, 51, 8
+  CONTROL "", -1, "Static", SS_ETCHEDHORZ, 7, 123, 365, 1
+  CONTROL "Stock actual", -1, "Static", WS_GROUP, 146, 130, 44, 8
+  CONTROL "Precio", -1, "Static", WS_GROUP, 8, 112, 23, 8
+  CONTROL "Importe", -1, "Static", WS_GROUP, 8, 130, 26, 8
+  CONTROL "Almacén", -1, "Static", WS_GROUP, 146, 112, 31, 8
+  CONTROL "Peso", -1, "Static", WS_GROUP, 146, 86, 20, 8
+  CONTROL "Volumen", -1, "Static", WS_GROUP, 146, 99, 30, 8
+  CONTROL "Tot. peso", -1, "Static", WS_GROUP, 269, 86, 37, 8
+  CONTROL "Tot. volumen", -1, "Static", WS_GROUP, 269, 99, 42, 8
+  CONTROL "Propiedad 2", 231, "Static", WS_GROUP, 8, 63, 51, 8
+  CONTROL "Propiedad 1", 221, "Static", WS_GROUP, 8, 52, 51, 8
   CONTROL "Nº lote", 211, "Static", WS_GROUP, 8, 26, 25, 8
+  CONTROL "Caducidad", 321, "Static", WS_GROUP, 8, 38, 51, 8
 }
 
 LPRODUCIDO_2 DIALOG DISCARDABLE 144, 103, 378, 130
