--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -7233,8 +7233,9 @@ STYLE WS_POPUP|DS_MODALFRAME|DS_3DLOOK|WS_CAPTION|WS_SYSMENU|WS_VISIBLE
 CAPTION "Familias de artículos"
 FONT 8, "MS Sans Serif"
 {
-  CONTROL "&Aceptar [F5]", IDOK, "Button", BS_DEFPUSHBUTTON|WS_TABSTOP, 246, 341, 50, 14
-  CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 301, 341, 50, 14
+  CONTROL "&Aceptar [F5]", IDOK, "Button", BS_DEFPUSHBUTTON|WS_TABSTOP, 250, 342, 50, 14
+  CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 301, 342, 50, 14
+  CONTROL "Aceptar y actualizar &web [F6]", 500, "Button", WS_TABSTOP, 150, 342, 98, 14
   CONTROL "", 100, "SysTabControl32", WS_TABSTOP, 3, 2, 349, 334
 }
 
